fix z-index

--- a/css/style2.css
+++ b/css/style2.css
@@ -1,4 +1,7 @@
 .prova {
   text-align: left; }
 
+.aa {
+  text-align: center; }
+
 /*# sourceMappingURL=style2.css.map */
