--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,7 @@
 .prova {
     text-align: left;
 }
+
+.aa {
+    text-align: center;
+}
